--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@nuxt/devtools": "latest",
     "@types/node": "^18.17.1",
     "nuxt": "^3.6.5"
+  },
+  "dependencies": {
+    "primevue": "^3.31.0"
   }
 }
