--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^3.6.5"
   },
   "dependencies": {
-    "primevue": "^3.31.0"
+    "primevue": "^3.31.0",
+    "sass": "^1.64.1"
   }
 }
