--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@types/node": "^18.17.1",
-    "nuxt": "^3.6.5"
+    "nuxt": "^3.6.5",
+    "primeflex": "^3.3.1",
+    "primevue": "^3.31.0"
   },
   "dependencies": {
-    "primeflex": "^3.3.1",
-    "primevue": "^3.31.0",
     "sass": "^1.64.1"
   }
 }
