--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "primevue": "^3.31.0"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
     "openai": "^3.3.0",
+    "pinia": "^2.1.6",
     "sass": "^1.64.1"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
