Adding digital ocean config

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "start": "node .output/server/index.mjs",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -25,5 +26,8 @@
   },
   "overrides": {
     "vue": "latest"
+  },
+  "engines": {
+    "node": "16.18.0"
   }
 }
