Add checkout step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
     name: Build nuxt on node
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4.1.0
     - name: Use Node
       uses: actions/setup-node@v3.8.1
       with:
