--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,17 @@ jobs:
       run: |
         npm ci
         npm run build
+  deploy-nuxt:
+    name: Deploy to Droplet
+    needs: build-nuxt
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4.1.0
+    - name: Send files to Droplet
+      uses: appleboy/scp-action@v0.1.4
+      with:
+        host: ${{ secrets.DROPLET_HOST }}
+        username: ${{ secrets.DROPLET_USERNAME }}
+        key: ${{ secrets.DROPLET_KEY }}
+        source: .output/*
+        target: /opt/vueai.tools/test
