--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Use Node
       uses: actions/setup-node@v3.8.1
       with:
-        node-vertsion: '18.x'
+        node-version: '18.x'
     - name: npm install & build
       run: |
         npm ci
