--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
       - master
 jobs:
   build-nuxt:
-    name: Build nuxt on node
+    name: Build nuxt on node and send files to Droplet
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4.1.0
@@ -19,7 +19,7 @@ jobs:
       run: |
         npm ci
         npm run build
-    - name: Send files to Droplet
+    - name: scp to Droplet
       uses: appleboy/scp-action@v0.1.3
       with:
         host: ${{ secrets.DROPLET_HOST }}
@@ -27,3 +27,4 @@ jobs:
         key: ${{ secrets.DROPLET_KEY }}
         source: .output/*
         target: /opt/vueai.tools/test2
+        rm: true
