--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Use Node
       uses: actions/setup-node@v3.8.1
       with:
-        node-version: '16.x'
+        node-version: '16.18.0'
     - name: npm install & build
       run: |
         npm ci
@@ -32,8 +32,6 @@ jobs:
       env:
         SSH_AUTH_SOCK: /tmp/ssh_agent.sock
       run: |
-        echo "${{ secrets.DROPLET_KEY }}" > /home/runner/.ssh/github_actions
-        chmod 600 /home/runner/.ssh/github_actions
         ssh-agent -a $SSH_AUTH_SOCK > /dev/null	
-        ssh-add /home/runner/.ssh/github_actions
+        ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
         ssh -o StrictHostKeyChecking=no ${{ secrets.DROPLET_USERNAME }}@${{ secrets.DROPLET_HOST }} "cd /opt/vueai.tools && pm2 restart ecosystem.config.js"
