--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "marked": "^5.1.2",
     "openai": "^4.11.1",
     "pinia": "^2.1.6",
+    "pocketbase": "^0.19.0",
     "sass": "^1.64.1"
   },
   "overrides": {
