--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
 NUXT_OPENAI_ORGANIZATION="org-ab12"
 NUXT_OPENAI_API_KEY="sk-cd34"
-SUPABASE_URL="http://localhost:54321"
-SUPABASE_KEY="ef56"
+NUXT_PUBLIC_POCKETBASE_URL="http://localhost:8080"
