Replace custom SSH action with appleboy/ssh-action

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -28,10 +28,12 @@ jobs:
         LOCALPATH: .output/
         REMOTEPATH: /opt/nuxter/vue-ai-tools/.output.staging
         FLAGS: -avzr --delete
-    - name: restart docker on Droplet
-      env:
-        SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-      run: |
-        ssh-agent -a $SSH_AUTH_SOCK > /dev/null	
-        ssh-add - <<< "${{ secrets.DROPLET_KEY }}"
-        ssh -o StrictHostKeyChecking=no ${{ secrets.DROPLET_USERNAME }}@${{ secrets.DROPLET_HOST }} "cd /opt/nuxter/vue-ai-tools/nuxter-config && docker compose -f vue-ai-tools-staging-compose.yml up -d --build nuxt-app && exit"
+    - name: Restart docker on Droplet
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.DROPLET_HOST }}
+        username: ${{ secrets.DROPLET_USERNAME }}
+        key: ${{ secrets.DROPLET_KEY }}
+        script: |
+          cd /opt/nuxter/vue-ai-tools/nuxter-config
+          docker compose -f vue-ai-tools-staging-compose.yml up -d --build nuxt-app
