--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Use Node
       uses: actions/setup-node@v3.8.1
       with:
-        node-version: '16.18.0'
+        node-version: 18
     - name: npm install & build
       run: |
         npm ci
