--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -10,6 +10,7 @@ jobs:
     uses: chris-paganon/nuxter/.github/workflows/deploy-nuxt-app.yml@master
     with:
       app_name: vue-ai-tools
+      app_env: staging
     secrets:
       DROPLET_USERNAME: ${{ secrets.DROPLET_USERNAME }}
       DROPLET_HOST: ${{ secrets.DROPLET_HOST }}
