--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "openai": "^4.11.1",
     "pinia": "^2.1.6",
     "pocketbase": "^0.19.0",
+    "primeicons": "^6.0.1",
     "sass": "^1.64.1"
   },
   "overrides": {
