--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NUXT_OPENAI_ORGANIZATION="org-ab12"
 NUXT_OPENAI_API_KEY="sk-cd34"
+NUXT_STRIPE_SECRET_KEY="sk_test_cd34"
 NUXT_PUBLIC_POCKETBASE_URL="http://localhost:8080"
+NUXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_12ab"
