--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "@stripe/stripe-js": "^2.2.2",
     "@types/marked": "^5.0.1",
     "marked": "^5.1.2",
     "openai": "^4.11.1",
     "pinia": "^2.1.6",
     "pocketbase": "^0.19.0",
     "primeicons": "^6.0.1",
-    "sass": "^1.64.1"
+    "sass": "^1.64.1",
+    "stripe": "^14.10.0"
   },
   "overrides": {
     "vue": "latest"
