Add basic stripe webhook endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NUXT_OPENAI_ORGANIZATION="org-ab12"
 NUXT_OPENAI_API_KEY="sk-cd34"
 NUXT_STRIPE_SECRET_KEY="sk_test_cd34"
+NUXT_STRIPE_WEBHOOK_SECRET="whsec_efGh"
 NUXT_PUBLIC_POCKETBASE_URL="http://localhost:8080"
 NUXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_12ab"
