--- a/nuxter-config/nuxt-app.staging.env.sample
+++ b/nuxter-config/nuxt-app.staging.env.sample
@@ -1,4 +1,10 @@
 NUXT_OPENAI_ORGANIZATION="org-ab12"
 NUXT_OPENAI_API_KEY="sk-cd34"
+NUXT_STRIPE_SECRET_KEY="sk_test_cd34"
+NUXT_STRIPE_WEBHOOK_SECRET="whsec_efGh"
+NUXT_PB_ADMIN_EMAIL="example@mail.com"
+NUXT_PB_ADMIN_PASSWORD="password"
+NUXT_PUBLIC_ENVIRONMENT="staging"
 NUXT_PUBLIC_POCKETBASE_URL="https://stagingdb.vueai.tools"
 NUXT_PUBLIC_PUBLIC_FOLDER_URL="https://staging.vueai.tools"
+NUXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_12ab"
