Update pb docker compose include project_directory

--- a/nuxter-config/vue-ai-tools-staging-compose.yml
+++ b/nuxter-config/vue-ai-tools-staging-compose.yml
@@ -6,4 +6,5 @@ include:
     project_directory: ../../
     env_file: staging.env
   - path: ../../base/pb-db-compose.yml
+    project_directory: ../../
     env_file: staging.env
