--- a/nuxter-config/vue-ai-tools-production-compose.yml
+++ b/nuxter-config/vue-ai-tools-production-compose.yml
@@ -8,4 +8,5 @@ include:
   - path: ../../base/umami-compose.yml
     env_file: ./production.env
   - path: ../../base/pb-db-compose.yml
+    project_directory: ../../
     env_file: ./production.env
