--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^18.17.1",
     "nuxt": "^3.6.5",
     "nuxt-primevue": "^0.1.0",
+    "nuxt-security": "^1.0.0",
     "primeflex": "^3.3.1"
   },
   "dependencies": {
