--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   db:
     build:
       context: .
-      dockerfile: ../base/Dockerfile.pb-db
+      dockerfile: ./nuxter-config/Dockerfile.pb-db
     ports:
       - 8080:8080
     volumes:
