--- a/nuxter-config/nuxter-base-compose.yml
+++ b/nuxter-config/nuxter-base-compose.yml
@@ -2,25 +2,23 @@ version: '3.8'
 
 services:
   nuxt-app:
-    container_name: ${APP_NAME}-${APP_ENV}-nuxt-app
+    container_name: ${COMPOSE_PROJECT_NAME}-nuxt-app
     build: 
       context: .
       dockerfile: nuxter-config/Dockerfile.nuxt-app
       args:
-        APP_NAME: ${APP_NAME}
         APP_ENV: ${APP_ENV}
     env_file: nuxter-config/nuxt-app.${APP_ENV}.env
     restart: unless-stopped
     networks:
       - caddy_nuxt_app
   pb-db:
-    container_name: ${APP_NAME}-${APP_ENV}-pb-db
+    container_name: ${COMPOSE_PROJECT_NAME}-pb-db
     build: 
       context: .
       dockerfile: nuxter-config/Dockerfile.pb-db
       args:
         PB_ENCRYPTION_KEY: ${PB_ENCRYPTION_KEY}
-        APP_NAME: ${APP_NAME}
     restart: unless-stopped
     volumes:
       - pb_data:/pb/pb_data
@@ -29,12 +27,12 @@ services:
 
 volumes:
   pb_data:
-    name: ${APP_NAME}_${APP_ENV}_pb_data
+    name: ${COMPOSE_PROJECT_NAME}_pb_data
 
 networks:
   caddy_nuxt_app:
-    name: ${APP_NAME}_${APP_ENV}_caddy_nuxt_app
+    name: ${COMPOSE_PROJECT_NAME}_caddy_nuxt_app
     external: true
   caddy_pb_db:
-    name: ${APP_NAME}_${APP_ENV}_caddy_pb_db
+    name: ${COMPOSE_PROJECT_NAME}_caddy_pb_db
     external: true
