--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "primeflex": "^3.3.1"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.1",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@pinia/nuxt": "^0.4.11",
     "@stripe/stripe-js": "^2.2.2",
     "@types/marked": "^5.0.1",
+    "codemirror": "^6.0.1",
     "marked": "^5.1.2",
     "openai": "^4.11.1",
     "pinia": "^2.1.6",
     "pocketbase": "^0.19.0",
     "primeicons": "^6.0.1",
     "sass": "^1.64.1",
-    "stripe": "^14.10.0"
+    "stripe": "^14.10.0",
+    "vue-codemirror": "^6.1.1"
   },
   "overrides": {
     "vue": "latest"
