--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "pocketbase": "^0.19.0",
     "primeicons": "^6.0.1",
     "sass": "^1.64.1",
-    "stripe": "^14.10.0",
-    "vue-codemirror": "^6.1.1"
+    "stripe": "^14.10.0"
   },
   "overrides": {
     "vue": "latest"
