--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "start": "node .output/server/index.mjs",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db:generate": "drizzle-kit generate:sqlite",
+    "db:push": "drizzle-kit push:sqlite"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@types/better-sqlite3": "^7.6.10",
     "@types/node": "^20.12.7",
+    "drizzle-kit": "^0.20.17",
     "nuxt-primevue": "^0.3.1",
     "primeflex": "^3.3.1"
   },
@@ -19,14 +23,19 @@
     "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@pinia/nuxt": "^0.5.1",
     "@stripe/stripe-js": "^2.2.2",
     "@types/marked": "^5.0.1",
+    "better-sqlite3": "^9.6.0",
     "codemirror": "^6.0.1",
+    "drizzle-orm": "^0.29.5",
+    "lucia": "^3.2.0",
     "marked": "^5.1.2",
     "nuxt": "^3.11.2",
     "nuxt-security": "^1.4.3",
     "openai": "^4.11.1",
+    "oslo": "^1.2.0",
     "pinia": "^2.1.7",
     "pocketbase": "^0.19.0",
     "primeicons": "^6.0.1",
