--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/eslint": "^0.3.10",
     "@types/better-sqlite3": "^7.6.10",
     "@types/node": "^20.12.7",
     "drizzle-kit": "^0.20.17",
+    "eslint-config-prettier": "^9.1.0",
     "nuxt-primevue": "^0.3.1",
+    "prettier": "^3.2.5",
     "primeflex": "^3.3.1"
   },
   "dependencies": {
