--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@pinia/nuxt": "^0.5.1",
+    "@sendgrid/mail": "^8.1.3",
     "@stripe/stripe-js": "^2.2.2",
     "@types/marked": "^5.0.1",
     "better-sqlite3": "^9.6.0",
