--- a/nuxter-config/nuxter-base-compose.yml
+++ b/nuxter-config/nuxter-base-compose.yml
@@ -10,6 +10,8 @@ services:
         APP_ENV: ${APP_ENV}
     env_file: nuxter-config/nuxt-app.${APP_ENV}.env
     restart: unless-stopped
+    volumes:
+      - sqlite_db:/opt/nuxter/.output/server/db
     networks:
       - caddy_nuxt_app
 
@@ -17,3 +19,6 @@ networks:
   caddy_nuxt_app:
     name: ${COMPOSE_PROJECT_NAME}_caddy_nuxt_app
     external: true
+volumes:
+  sqlite_db:
+    name: ${COMPOSE_PROJECT_NAME}_sqlite_db
