Remove pocketbase from nuxter config

--- a/nuxter-config/nuxt-app.staging.env.sample
+++ b/nuxter-config/nuxt-app.staging.env.sample
@@ -2,6 +2,7 @@ NUXT_OPENAI_ORGANIZATION="org-ab12"
 NUXT_OPENAI_API_KEY="sk-cd34"
 NUXT_STRIPE_SECRET_KEY="sk_test_cd34"
 NUXT_STRIPE_WEBHOOK_SECRET="whsec_efGh"
+NUXT_SENDGRID_API_KEY="SG.ab"
 NUXT_PUBLIC_ENVIRONMENT="staging"
 NUXT_PUBLIC_PUBLIC_FOLDER_URL="https://staging.vueai.tools"
 NUXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_12ab"
