--- a/nuxter-config/nuxt-app.production.env.sample
+++ b/nuxter-config/nuxt-app.production.env.sample
@@ -1,3 +1,8 @@
 NUXT_OPENAI_ORGANIZATION="org-ab12"
 NUXT_OPENAI_API_KEY="sk-cd34"
+NUXT_STRIPE_SECRET_KEY="sk_test_cd34"
+NUXT_STRIPE_WEBHOOK_SECRET="whsec_efGh"
+NUXT_SENDGRID_API_KEY="SG.ab"
+NUXT_PUBLIC_ENVIRONMENT="production"
 NUXT_PUBLIC_PUBLIC_FOLDER_URL="https://vueai.tools"
+NUXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_12ab"
