--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ NUXT_OPENAI_ORGANIZATION="org-ab12"
 NUXT_OPENAI_API_KEY="sk-cd34"
 NUXT_STRIPE_SECRET_KEY="sk_test_cd34"
 NUXT_STRIPE_WEBHOOK_SECRET="whsec_efGh"
+NUXT_LEMONSQUEEZY_WEBHOOK_SECRET="ab12"
 NUXT_SENDGRID_API_KEY="SG.ab12"
 NUXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_12ab"
 NUXT_PUBLIC_LEMONSQUEEZY_BASIC_SUB_KEY="ab12"
