--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
+# CAREFUL: Pulic environment variables, exposed to the client side
+NUXT_PUBLIC_ENVIRONMENT="dev"
+NUXT_PUBLIC_PUBLIC_FOLDER_URL="http://localhost:3000/_nuxt"
+NUXT_PUBLIC_LEMONSQUEEZY_BASIC_SUB_KEY="ab12"
+
+# Server only environment variables
 NUXT_OPENAI_ORGANIZATION="org-ab12"
 NUXT_OPENAI_API_KEY="sk-cd34"
-NUXT_STRIPE_SECRET_KEY="sk_test_cd34"
-NUXT_STRIPE_WEBHOOK_SECRET="whsec_efGh"
 NUXT_LEMONSQUEEZY_WEBHOOK_SECRET="ab12"
 NUXT_LEMONSQUEEZY_API_KEY="ab12"
 NUXT_SENDGRID_API_KEY="SG.ab12"
-NUXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_12ab"
-NUXT_PUBLIC_LEMONSQUEEZY_BASIC_SUB_KEY="ab12"
