--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "better-sqlite3": "^9.6.0",
     "codemirror": "^6.0.1",
     "drizzle-orm": "^0.30.10",
+    "llamaindex": "^0.3.14",
     "lucia": "^3.2.0",
     "marked": "^5.1.2",
     "nuxt": "^3.11.2",
