Add boilerplate for python vector index builder

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../.nuxt/tsconfig.server.json",
-  "exclude": ["../eslint.config.mjs"]
+  "exclude": ["../eslint.config.mjs", "../docs-modules"]
 }
