Setup python index builder with docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,30 @@ services:
       - '6333:6333'
     volumes:
       - vector-db-data:/var/lib/qdrant
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:6333"]
+      interval: 5s
+      start_period: 10s
+  
+  healthcheck:
+    image: curlimages/curl:latest
+    entrypoint: ["/bin/sh", "-c", "--", "sleep 40;"]
+    depends_on:
+      - vector-db
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://vector-db:6333/readyz"]
+      interval: 10s
+      timeout: 2s
+      retries: 3
+  
+  index-builder:
+    build: 
+      context: ./index-builder
+    volumes:
+      - ./index-builder:/usr/src/app
+    depends_on:
+      healthcheck:
+        condition: service_healthy
 
 volumes:
   vector-db-data:
