--- a/index-builder/Dockerfile
+++ b/index-builder/Dockerfile
@@ -5,4 +5,6 @@ WORKDIR /usr/src/app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
+ENV NUXT_TOGETHER_API_KEY="your-api-key"
+
 CMD [ "python", "./main.py" ]
