Add URL metadata & use it

--- a/index-builder/Dockerfile
+++ b/index-builder/Dockerfile
@@ -6,5 +6,6 @@ COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 ENV NUXT_TOGETHER_API_KEY="your-api-key"
+ENV NUXT_VUE_DOCS_INDEX_NAME="vue-docs"
 
 CMD [ "python", "./main.py" ]
