--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ NUXT_TOGETHER_API_KEY="ab12"
 NUXT_LEMONSQUEEZY_WEBHOOK_SECRET="ab12"
 NUXT_LEMONSQUEEZY_API_KEY="ab12"
 NUXT_SENDGRID_API_KEY="SG.ab12"
+NUXT_VUE_DOCS_INDEX_NAME="vue-docs"
