Add vectore store for nuxter config

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ NUXT_LEMONSQUEEZY_WEBHOOK_SECRET="ab12"
 NUXT_LEMONSQUEEZY_API_KEY="ab12"
 NUXT_SENDGRID_API_KEY="SG.ab12"
 NUXT_VUE_DOCS_INDEX_NAME="vue-docs"
+NUXT_VECTOR_STORE_URL="http://localhost:6333"
