--- a/nuxter-config/nuxter-base-compose.yml
+++ b/nuxter-config/nuxter-base-compose.yml
@@ -14,8 +14,23 @@ services:
       - .output.${APP_ENV}/server/db:/opt/nuxter/.output/server/db
     networks:
       - caddy_nuxt_app
+      - vector_db
+
+  vector-db:
+    container_name: ${COMPOSE_PROJECT_NAME}-vector-db
+    image: qdrant/qdrant
+    volumes:
+      - vector-db-data:/var/lib/qdrant
+    networks:
+      - vector_db
+
+volumes:
+  vector-db-data:
 
 networks:
   caddy_nuxt_app:
     name: ${COMPOSE_PROJECT_NAME}_caddy_nuxt_app
+    external: true
+  vector_db:
+    name: ${COMPOSE_PROJECT_NAME}_vector_db
     external: true
