--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ NUXT_PUBLIC_LEMONSQUEEZY_BASIC_SUB_KEY="ab12"
 
 # Server only environment variables
 NUXT_TOGETHER_API_KEY="ab12"
+NUXT_COHERE_API_KEY="ab12"
 NUXT_LEMONSQUEEZY_WEBHOOK_SECRET="ab12"
 NUXT_LEMONSQUEEZY_API_KEY="ab12"
 NUXT_SENDGRID_API_KEY="SG.ab12"
