--- a/index-builder/requirements.txt
+++ b/index-builder/requirements.txt
@@ -4,13 +4,18 @@ annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
 beautifulsoup4==4.12.3
+boto3==1.34.127
+botocore==1.34.127
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+cohere==5.5.7
 dataclasses-json==0.6.6
 Deprecated==1.2.14
 dirtyjson==1.0.8
 distro==1.9.0
+fastavro==1.9.4
+filelock==3.15.1
 frozenlist==1.4.1
 fsspec==2024.5.0
 greenlet==3.0.3
@@ -21,17 +26,22 @@ h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.5
 httpx==0.27.0
+httpx-sse==0.4.0
+huggingface-hub==0.23.4
 hyperframe==6.0.1
 idna==3.7
+jmespath==1.0.1
 joblib==1.4.2
 llama-index==0.10.40
 llama-index-agent-openai==0.2.5
 llama-index-cli==0.1.12
 llama-index-core==0.10.40
+llama-index-embeddings-cohere==0.1.9
 llama-index-embeddings-openai==0.1.10
 llama-index-embeddings-together==0.1.3
 llama-index-indices-managed-llama-cloud==0.1.6
 llama-index-legacy==0.9.48
+llama-index-llms-cohere==0.2.0
 llama-index-llms-openai==0.1.21
 llama-index-multi-modal-llms-openai==0.1.6
 llama-index-program-openai==0.1.6
@@ -51,6 +61,7 @@ numpy==1.26.4
 openai==1.30.5
 packaging==24.0
 pandas==2.2.2
+parameterized==0.9.0
 pillow==10.3.0
 portalocker==2.8.2
 protobuf==5.27.0
@@ -64,6 +75,7 @@ PyYAML==6.0.1
 qdrant-client==1.9.1
 regex==2024.5.15
 requests==2.32.3
+s3transfer==0.10.1
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
@@ -71,7 +83,9 @@ SQLAlchemy==2.0.30
 striprtf==0.0.26
 tenacity==8.3.0
 tiktoken==0.7.0
+tokenizers==0.15.2
 tqdm==4.66.4
+types-requests==2.32.0.20240602
 typing-inspect==0.9.0
 typing_extensions==4.12.0
 tzdata==2024.1
