--- a/nuxter-config/nuxt-app.production.env.sample
+++ b/nuxter-config/nuxt-app.production.env.sample
@@ -4,9 +4,7 @@ NUXT_PUBLIC_PUBLIC_FOLDER_URL="https://vueai.tools"
 NUXT_PUBLIC_LEMONSQUEEZY_BASIC_SUB_KEY="ab12"
 
 # Server only environment variables
-NUXT_TOGETHER_API_KEY="ab12"
-NUXT_OPENAI_ORGANIZATION="org-ab12"
-NUXT_OPENAI_API_KEY="sk-cd34"
+NUXT_COHERE_API_KEY="ab12"
 NUXT_LEMONSQUEEZY_WEBHOOK_SECRET="ab12"
 NUXT_LEMONSQUEEZY_API_KEY="ab12"
 NUXT_SENDGRID_API_KEY="SG.ab"
