--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ NUXT_PUBLIC_PUBLIC_FOLDER_URL="http://localhost:3000/_nuxt"
 NUXT_PUBLIC_LEMONSQUEEZY_BASIC_SUB_KEY="ab12"
 
 # Server only environment variables
+NUXT_AI_ENVIRONMENT="local"
 NUXT_COHERE_API_KEY="ab12"
 NUXT_DEEPSEEK_API_KEY="ab12"
 NUXT_LEMONSQUEEZY_WEBHOOK_SECRET="ab12"
