Enable index builder in or out of docker

--- a/index-builder/Dockerfile
+++ b/index-builder/Dockerfile
@@ -2,10 +2,14 @@ FROM python:3.11
 
 WORKDIR /usr/src/app
 
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+COPY pyproject.toml poetry.lock ./
+RUN pip install poetry && poetry install --only main --no-root --no-directory
+
+COPY src/ ./src
+RUN poetry install --only main
 
 ENV NUXT_TOGETHER_API_KEY="your-api-key"
 ENV NUXT_VUE_DOCS_INDEX_NAME="vue-docs"
+ENV NUXT_AI_ENVIRONMENT="local"
 
-CMD [ "python", "-u", "./main.py" ]
+CMD [ "poetry", "run", "python", "src" ]
