Add environment variables for local AI models

--- a/index-builder/Dockerfile
+++ b/index-builder/Dockerfile
@@ -11,5 +11,6 @@ RUN poetry install --only main
 ENV NUXT_TOGETHER_API_KEY="your-api-key"
 ENV NUXT_VUE_DOCS_INDEX_NAME="vue-docs"
 ENV NUXT_AI_ENVIRONMENT="local"
+ENV NUXT_LOCAL_EMBEDDING_MODEL=="BAAI/bge-small-en-v1.5"
 
 CMD [ "poetry", "run", "python", "src" ]
