--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ NUXT_PUBLIC_LEMONSQUEEZY_BASIC_SUB_KEY="ab12"
 NUXT_AI_ENVIRONMENT="local"
 NUXT_COHERE_API_KEY="ab12"
 NUXT_DEEPSEEK_API_KEY="ab12"
+NUXT_LOCAL_LLM_MODEL="llama3:instruct"
+NUXT_LOCAL_EMBEDDING_MODEL="BAAI/bge-small-en-v1.5"
 NUXT_LEMONSQUEEZY_WEBHOOK_SECRET="ab12"
 NUXT_LEMONSQUEEZY_API_KEY="ab12"
 NUXT_SENDGRID_API_KEY="SG.ab12"
