Add environment variables for local AI models to nuxter config

--- a/nuxter-config/nuxt-app.production.env.sample
+++ b/nuxter-config/nuxt-app.production.env.sample
@@ -4,8 +4,11 @@ NUXT_PUBLIC_PUBLIC_FOLDER_URL="https://vueai.tools"
 NUXT_PUBLIC_LEMONSQUEEZY_BASIC_SUB_KEY="ab12"
 
 # Server only environment variables
+NUXT_AI_ENVIRONMENT="remote"
 NUXT_COHERE_API_KEY="ab12"
 NUXT_DEEPSEEK_API_KEY="ab12"
+NUXT_LOCAL_LLM_MODEL="llama3:instruct"
+NUXT_LOCAL_EMBEDDING_MODEL="BAAI/bge-small-en-v1.5"
 NUXT_LEMONSQUEEZY_WEBHOOK_SECRET="ab12"
 NUXT_LEMONSQUEEZY_API_KEY="ab12"
 NUXT_SENDGRID_API_KEY="SG.ab"
