Enable npm cache in github action

--- a/.github/workflows/deploy-nuxt-app.yml
+++ b/.github/workflows/deploy-nuxt-app.yml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/setup-node@v3.8.1
         with:
           node-version: 20
+          cache: 'npm'
       - name: npm install & build
         run: |
           npm ci
