--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "lucia": "^3.2.0",
     "marked": "^5.1.2",
     "nuxt": "^3.11.2",
-    "nuxt-security": "^1.4.3",
+    "nuxt-security": "^2.4.0",
     "ollama": "^0.5.2",
     "oslo": "^1.2.0",
     "pinia": "^2.1.7",
@@ -49,5 +49,10 @@
     "sass": "^1.64.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3"
+    ]
   }
 }
