unify env files

--- a/nuxter-config/staging.env.sample
+++ b/nuxter-config/staging.env.sample
@@ -1,1 +1,20 @@
 APP_ENV="staging"
+APP_HOST="staging.vueai.tools"
+VECTOR_DB_HOST="vectorstaging.vueai.tools"
+
+# CAREFUL: Pulic environment variables, exposed to the client side
+NUXT_PUBLIC_ENVIRONMENT="staging"
+NUXT_PUBLIC_PUBLIC_FOLDER_URL="https://staging.vueai.tools"
+NUXT_PUBLIC_LEMONSQUEEZY_BASIC_SUB_KEY="ab12"
+
+# Server only environment variables
+NUXT_AI_ENVIRONMENT="remote"
+NUXT_COHERE_API_KEY="ab12"
+NUXT_DEEPSEEK_API_KEY="ab12"
+NUXT_LOCAL_LLM_MODEL="llama3:instruct"
+NUXT_LOCAL_EMBEDDING_MODEL="BAAI/bge-small-en-v1.5"
+NUXT_LEMONSQUEEZY_WEBHOOK_SECRET="ab12"
+NUXT_LEMONSQUEEZY_API_KEY="ab12"
+NUXT_SENDGRID_API_KEY="SG.ab12"
+NUXT_VUE_DOCS_INDEX_NAME="vue-docs"
+NUXT_VECTOR_STORE_URL="http://vue-ai-tools-staging-vector-db:6333"
