--- a/docker-compose.nuxter.yml
+++ b/docker-compose.nuxter.yml
@@ -5,6 +5,8 @@ services:
       context: .
       args:
         APP_ENV: ${APP_ENV}
+    env_file:
+      - .env.${APP_ENV}
     restart: always
     volumes:
       - .output.${APP_ENV}/server/db:/opt/nuxter/.output/server/db
