--- a/.env.staging.example
+++ b/.env.staging.example
@@ -15,6 +15,7 @@ NUXT_LOCAL_LLM_MODEL="llama3:instruct"
 NUXT_LOCAL_EMBEDDING_MODEL="BAAI/bge-small-en-v1.5"
 NUXT_LEMONSQUEEZY_WEBHOOK_SECRET="ab12"
 NUXT_LEMONSQUEEZY_API_KEY="ab12"
+NUXT_BREVO_API_KEY="ab12"
 NUXT_SENDGRID_API_KEY="SG.ab12"
 NUXT_VUE_DOCS_INDEX_NAME="vue-docs"
 NUXT_VECTOR_STORE_URL="http://vue-ai-tools-staging-vector-db:6333"
