--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "@getbrevo/brevo": "^3.0.1",
     "@lemonsqueezy/lemonsqueezy.js": "^2.2.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@pinia/nuxt": "^0.5.1",
-    "@sendgrid/mail": "^8.1.3",
     "@types/marked": "^5.0.1",
     "better-sqlite3": "^9.6.0",
     "codemirror": "^6.0.1",
