new deploy scripts

--- a/docker-compose.nuxter.override.yml
+++ b/docker-compose.nuxter.override.yml
@@ -1,10 +1,12 @@
 services:
   nuxt-app:
+    restart: 'no'
     labels:
       - 'traefik.http.routers.vue-ai-tools_nuxt-app-${APP_ENV}-router.entrypoints=web'
       - 'traefik.http.routers.vue-ai-tools_nuxt-app-${APP_ENV}-router.tls=false'
 
   vector-db:
+    restart: 'no'
     labels:
       - 'traefik.http.routers.vue-ai-tools_vetor-db-${APP_ENV}-router.entrypoints=web'
       - 'traefik.http.routers.vue-ai-tools_vetor-db-${APP_ENV}-router.tls=false'
