--- a/docker-compose.nuxter.yml
+++ b/docker-compose.nuxter.yml
@@ -7,7 +7,7 @@ services:
         APP_ENV: ${APP_ENV}
     env_file:
       - .env.${APP_ENV}
-    restart: always
+    restart: unless-stopped
     volumes:
       - .output.${APP_ENV}/server/db:/opt/nuxter/.output/server/db
     networks:
@@ -22,7 +22,7 @@ services:
   vector-db:
     container_name: ${COMPOSE_PROJECT_NAME}-vector-db
     image: qdrant/qdrant:v1.9.5
-    restart: always
+    restart: unless-stopped
     volumes:
       - vector-db-data:/var/lib/qdrant
     networks:
