--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@getbrevo/brevo": "^3.0.1",
     "@lemonsqueezy/lemonsqueezy.js": "^2.2.0",
-    "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@lucia-auth/adapter-drizzle": "1.0.7",
     "@pinia/nuxt": "^0.5.1",
     "@types/marked": "^5.0.1",
     "better-sqlite3": "^9.6.0",
     "codemirror": "^6.0.1",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "0.30.10",
     "llamaindex": "^0.3.14",
-    "lucia": "^3.2.0",
+    "lucia": "3.2.0",
     "marked": "^5.1.2",
     "nuxt": "^3.11.2",
     "nuxt-security": "^2.4.0",
